# mtg-parser

./: .editorconfig  .env  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/actions/setup-project/: action.yaml
.github/workflows/: integration_aetherhub.yaml  integration_archidekt.yaml  integration_deckstats.yaml  integration_moxfield.yaml  integration_mtggoldfish.yaml  integration_mtgjson.yaml  integration_mtgvault.yaml  integration_scryfall.yaml  integration_tappedout.yaml  integration_tcgplayer.yaml  latest_release.yaml  nightly.yaml
src/mtg_parser/: __init__.py  aetherhub.py  archidekt.py  card.py  deck_parser.py  decklist.py  deckstats.py  diff.py  gramar.py  grammar.py  http_client.py  moxfield.py  mtggoldfish.py  mtgjson.py  mtgvault.py  options.py  parser.py  scryfall.py  tappedout.py  tcgplayer.py  tcgplayer_infinite.py  utils.py
tests/: asserts.py  conftest.py  test_aetherhub.py  test_archidekt.py  test_card.py  test_common.py  test_decklist.py  test_deckstats.py  test_decktojson.py  test_diff.py  test_grammar.py  test_http_client.py  test_moxfield.py  test_mtggoldfish.py  test_mtgjson.py  test_mtgvault.py  test_options.py  test_parse_deck.py  test_parse_decklist.py  test_parser.py  test_scryfall.py  test_tappedout.py  test_tcgplayer.py  test_tcgplayer_infinite.py  test_tcgplayer_ininite.py  test_utils.py  test_version.py  update_mock_data.py  utils.py
tests/mocks/: aetherhub_com_9f0633f8  aetherhub_com_c61ba05d  api_moxfield_com_2d0b7a2b  api_scryfall_com_c4c0a87  archidekt_com_e7b43e8b  deckstats_net_4843ace  infinite-api_tcgplayer_com_8302f5f3  infinite-api_tcgplayer_com_c3c847b5  mock_aetherhub_3-amigos  mock_aetherhub_3-amigos_json  mock_aetherhub_489549  mock_aetherhub_489549_json  mock_archidekt_1300410  mock_archidekt_1300410_small  mock_archidekt_1365846_small  mock_deckstats_30198_1297260-feather-the-redeemed  mock_deckstats_30198_2034245  mock_moxfield_7CBqQtCVKES6e49vKXfIBQ  mock_moxfield_Agzx8zsi5UezWBUX5hMJPQ  mock_mtggoldfish_3-amigos  mock_mtggoldfish_3-amigos_content  mock_mtggoldfish_3862693  mock_mtgjson_breedlethality_cmd2.json  mock_scryfall_e7aceb4c-29d5-49f5-9a49-c24f64da264b  mock_tappedout_3-amigos  mock_tappedout_food-chain-sliver  mock_tcgplayer.json  mock_tcgplayer_3-amigos  mock_tcgplayer_infinite.json  mock_tcgplayer_s08e08_kraum_tevesh  mtgjson_com_903041c3  tappedout_net_df3bbe8b  www_mtggoldfish_com_3c366e1c  www_mtggoldfish_com_b978d944  www_mtgvault_com_57be44db
