[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "mtg_parser"
version = "0.0.1a43"
license = "MIT"
description = "Magic: the Gathering decklist parser"
readme = "README.md"
authors = ["Ludovic Heyberger <940408+lheyberger@users.noreply.github.com>"]
homepage = "https://github.com/lheyberger/mtg-parser"
repository = "https://github.com/lheyberger/mtg-parser"
documentation = "https://github.com/lheyberger/mtg-parser"


[tool.poetry.dependencies]
beautifulsoup4 = "^4.12"
httpx = {extras = ["brotli", "http2", "zstd"], version = "^0.28.0"}
pyparsing = "^3.1"
python = "^3.8.1"


[tool.poetry.group.dev.dependencies]
check-wheel-contents = "^0.6"
coverage = {extras = ["toml"], version = "^7.3"}
flake8 = "^7.0.0"
flake8-pyproject = "^1.2.3"
more-itertools = "^10.1"
pylint = "^3.0"
pytest = "^7.4"
python-dotenv = "^1.0.1"
respx = "^0.21.1"
tabulate = "^0.9"


[tool.flake8]
max-line-length=120


[tool.pylint."MESSAGES CONTROL"]
max-line-length=120
disable = [
    "duplicate-code",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "stop-iteration-return",
    "too-many-arguments",
    "too-many-function-args",
]


[tool.coverage.run]
source = [ "src" ]


[tool.coverage.paths]
source = [ "src" ]


[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
